@startuml SRP New
class Car {
    String _id
    String _model
    String _brand
    String getId()
    String getModel()
    String getBrand()

}
class CarComparer {
    Car getBestCar()
}
class CarDb {
    Car getCarById()
    List<Car> getAllCars()
    String getCarsNames()
}
class CarManager {
    Car getCarFromDb()
    String getCarsNames()
    Car getBestCar()
}

CarDb <.. CarManager
CarDb <.. CarComparer
CarComparer <.. CarManager
Car <.. CarDb
Car <.. CarComparer
Car <.. CarManager
@enduml
